--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.impactbusinessgroup.com/jb/Sr-IT-Applications-Project-Manager-Jobs-in-Michigan-Benton-Harbor/4832435'>Sr. IT Applications Project Manager Job in Grand Rapids Michigan, Benton Harbor | Other (HR, Admin, Mkt, Sales)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1898856?gh_src=8ce2b0531'>Job Application for Lead Program Manager, Anti-Harassment at Wikimedia Foundation</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA</span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://hire.withgoogle.com/public/jobs/polsourcecom/view/P_AAAAAAIAACzHhGVA7KuHyW'>Sr Project Manager job in USA at PolSource</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -52,11 +60,11 @@
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698642411-partner-network-project-manager-earthport-level-4'>Visa Partner Network Project Manager - Earthport - Level 4 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698642411-partner-network-project-manager-earthport-level-4'>Visa Partner Network Project Manager - Earthport - Level 4 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698640925-sr-project-manager-global-business-operations-excellence'>Biogen Sr. Project Manager, Global Business Operations Excellence | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698640925-sr-project-manager-global-business-operations-excellence'>Biogen Sr. Project Manager, Global Business Operations Excellence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -68,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vmlyr/job/oqCqbfwn'>VMLY&R Careers - Senior Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/vmlyr/job/oqCqbfwn'>VMLY&R Careers - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -144,7 +152,7 @@
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/shiftdigital/job/oi3tbfwJ'>Shift Digital Careers - Program Manager - Lead Management</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/shiftdigital/job/oi3tbfwJ'>Shift Digital Careers - Program Manager - Lead Management</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -154,7 +162,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NealAnalytics/743999698493118-business-intelligence-project-manager'>Neal Analytics Business Intelligence Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/NealAnalytics/743999698493118-business-intelligence-project-manager'>Neal Analytics Business Intelligence Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Redmond, WA, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -182,7 +190,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/github/jobs/1937896'>Job Application for Sales Operations Project Manager at GitHub</a></h5> 
+<h5><a href='https://boards.greenhouse.io/github/jobs/1937896'>Job Application for Sales Operations Project Manager at GitHub</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -194,7 +202,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light">Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/chatmeter/e2cd52a3-833e-4f4c-96ac-2ea8c1685d14'>Chatmeter - Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/chatmeter/e2cd52a3-833e-4f4c-96ac-2ea8c1685d14'>Chatmeter - Project Manager</a></h5> 
 <p><span class="badge badge-light">San Diego, CA  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -210,7 +218,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.artsandmediajobs.com/uk/job/14722/programme-manager-major-projects-1/'>Programme Manager: Major Projects with The British Museum</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.artsandmediajobs.com/uk/job/14722/programme-manager-major-projects-1/'>Programme Manager: Major Projects with The British Museum</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -260,7 +268,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Stockholm</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfotreeServiceInc2/743999698615531-compliance-program-manager'>Infotree Service Inc Compliance Program Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/InfotreeServiceInc2/743999698615531-compliance-program-manager'>Infotree Service Inc Compliance Program Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -300,7 +308,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/WernerEnterprises/743999698612677-technical-project-manager'>Werner Enterprises Technical Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WernerEnterprises/743999698612677-technical-project-manager'>Werner Enterprises Technical Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Omaha, NE North America Australia Omaha, Nebraska United States Canada Mexico Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -348,7 +356,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cygnal/jobs/4503137002'>Job Application for Research Project Manager at Cygnal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cygnal/jobs/4503137002'>Job Application for Research Project Manager at Cygnal</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -360,7 +368,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/torrid/job/o9Mqbfwg'>Torrid Careers - Production Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/torrid/job/o9Mqbfwg'>Torrid Careers - Production Project Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -390,7 +398,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/generalassembly/jobs/1935163'>Job Application for Technical Project Manager at General Assembly</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/generalassembly/jobs/1935163'>Job Application for Technical Project Manager at General Assembly</a></h5> 
 <p><span class="badge badge-light">New York  New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -406,7 +414,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geotab/7c41c540-6302-413b-87b2-3c23bcd429bc'>Geotab - Senior Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/geotab/7c41c540-6302-413b-87b2-3c23bcd429bc'>Geotab - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -422,7 +430,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/dentwizard/job/oIqsbfwv'>Dent Wizard International Careers - Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/dentwizard/job/oIqsbfwv'>Dent Wizard International Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -436,14 +444,6 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Lely1/743999698589349-project-manager-product-development-maassluis-fulltime-'>Lely Project Manager Product Development (Maassluis, fulltime) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Zooplus/743999698378559-project-manager-with-german'>zooplus Project Manager with German | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Munich</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/xylem-hun/job/oeGrbfwg'>Xylem Careers - Project Manager/Sr. Project Manager</a></h5> 
-<p><span class="badge badge-light">Charlotte North Carolina</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
